# editorconfig-core-lua

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  TODO  editorconfig-core-git-1.rockspec  editorconfig-core-scm-1.rockspec  editorconfig.lua  editorconfig.lua.in  editorconfig_lua.c  test.lua.in  test_ec.sh.in
cmake/Modules/: FindEditorConfig.cmake
